--- a/test.html
+++ b/test.html
@@ -19,12 +19,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Muli", sans-serif}
     </a>
     <img src="/w3images/avatar_g2.jpg" style="width:45%;" class="w3-round"><br><br>
     <h4><b>BRC Maps Team</b></h4>
-    <p class="w3-text-grey">Based on a template by W3.CSS</p>
   </div>
   <div class="w3-bar-block">
-    <a href="#Guide 1" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Guide 1</a> 
-    <a href="#Guide 2" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>Guide 2</a> 
-    <a href="#Guide 3" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>Guide 3</a>
+    <a href="#About" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-book fa-fw w3-margin-right"></i>About</a> 
+    <a href="#Guides" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-book fa-fw w3-margin-right"></i>Guides</a> 
+    <a href="#Wiki" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-book fa-fw w3-margin-right"></i>Wiki</a>
   </div>
 </nav>
 
