--- a/QGIS2Web-GithubPage.html
+++ b/QGIS2Web-GithubPage.html
@@ -52,7 +52,7 @@ Once the Repo folder is on your local machine, you can copy the complete folder 
 Step Four: Github Desktop
 </h3>
 
-<p>Github Desktop should detect that you’ve made changes to the repository. Bottom left click “Commit” (you may need to write a comment in the box above the button). It’ll do some thinking, then take you to another page in the app that has a button that says “Push”, click that and wait till it does its stuff.
+<p>Github Desktop should detect that you’ve made changes to the repository. Bottom left click “Commit to master” (you may need to write a comment in the box above the button). It’ll do some thinking, then take you to another page in the app that has a button that says “Push”, click that and wait till it does its stuff.
 
 <h3>
 Step Five: Access webmap online
