--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     </head>
     <body>
         <h1>This is a page</h1>
-        <p>This is some text
-            <br>
-           Link to a map: <a href="https://davidcallaghan.github.io/map#1/0/0">Cool and awesome map</a> 
+        <p>
+            This is some text
         </p>
 
     </body>
