--- a/index.html
+++ b/index.html
@@ -51,11 +51,19 @@ body {
 </style>
 </head>
 
-    <body>
+<body>
+
+<div class="sidenav">
+  <a href="https://davidcallaghan.github.io/">Home</a>
+  <a href="https://davidcallaghan.github.io/guides">Guides</a>
+  <a href="https://davidcallaghan.github.io/projects">Projects</a>
+</div>
+
+<div class="content">
         <h1>This is a page</h1>
         <p>
             This is some text
         </p>
 
-    </body>
+</body>
         
