--- a/guides/leaflet.html
+++ b/guides/leaflet.html
@@ -53,7 +53,7 @@ body {
 <body>
 
 <div class="sidenav">
-  <a href="https://davidcallaghan.github.io/">Home</a>
+  <a href="https://davidcallaghan.github.io/index">Home</a>
   <a href="https://davidcallaghan.github.io/guides">Guides</a>
   <a href="https://davidcallaghan.github.io/projects">Projects</a>
 </div>
