--- a/guides/leaflet.html
+++ b/guides/leaflet.html
@@ -54,7 +54,7 @@ body {
 
 <div class="sidenav">
   <a href="https://davidcallaghan.github.io/index">Home</a>
-  <a href="https://davidcallaghan.github.io/guides">Guides</a>
+  <a href="https://davidcallaghan.github.io/guides/guides">Guides</a>
   <a href="https://davidcallaghan.github.io/projects">Projects</a>
 </div>
 
