--- a/guides/guides-home.html
+++ b/guides/guides-home.html
@@ -55,14 +55,14 @@ body {
 
 <div class="sidenav">
   <a href="https://davidcallaghan.github.io/index">Home</a>
-  <a href="https://davidcallaghan.github.io/guides/guides">Guides</a>
+  <a href="https://davidcallaghan.github.io/guides/guides-home">Guides</a>
   <a href="https://davidcallaghan.github.io/projects">Projects</a>
 </div>
 
 <div class="content">
-        <h1>This is a page</h1>
+        <h1>This is a page about guides</h1>
         <p>
-            This is some text
+            This is some text GUIDES PAGE
         </p>
 </div>
 </body>
