--- a/guides/guides-home.html
+++ b/guides/guides-home.html
@@ -55,8 +55,8 @@ body {
 
 <div class="sidenav">
   <a href="https://davidcallaghan.github.io/index">Home</a>
-  <a href="https://davidcallaghan.github.io/guides/guides-home">Guides</a>
-  <a href="https://davidcallaghan.github.io/projects">Projects</a>
+  <a href="https://davidcallaghan.github.io/guides/guides-home.html">Guides</a>
+  <a href="https://davidcallaghan.github.io/projects/">Projects</a>
 </div>
 
 <div class="content">
