--- a/guides/guides-home.html
+++ b/guides/guides-home.html
@@ -62,7 +62,7 @@ body {
 <div class="content">
         <h1>This is a page about guides</h1>
         <p>
-            This is some text GUIDES PAGE
+            This is some text on the guides page
         </p>
 </div>
 </body>
