--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ body {
 </div>
 
 <div class="content">
-        <h1>This is a page</h1>
+        <h1>This is an index page</h1>
         <p>
-            This is some text
+            This is some text on the index page
         </p>
 </div>
 </body>
