--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<title>DavidCallaghan.github.io</title>
+<title>Projects</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -62,9 +62,9 @@ body {
 </div>
 
 <div class="content">
-        <h1>This is an index page</h1>
+        <h1>This is a page about projects</h1>
         <p>
-            This is some text on the index page
+            This is some text on the projects page
         </p>
 </div>
 </body>
