--- a/guides.html
+++ b/guides.html
@@ -47,6 +47,8 @@ body {
 .content {
   margin-left: 110px;
   padding-left: 20px;
+  padding-right: 20px;
+  text-align: justify;
 }
 </style>
 </head>
