--- a/guides/leaflet.html
+++ b/guides/leaflet.html
@@ -47,6 +47,8 @@ body {
 .content {
   margin-left: 110px;
   padding-left: 20px;
+  padding-right: 20px;
+  text-align: justify;
 }
 </style>
 </head>
@@ -54,7 +56,7 @@ body {
 
 <div class="sidenav">
   <a href="https://davidcallaghan.github.io/index">Home</a>
-  <a href="https://davidcallaghan.github.io/guides/guides-home.html">Guides</a>
+  <a href="https://davidcallaghan.github.io/guides">Guides</a>
   <a href="https://davidcallaghan.github.io/projects">Projects</a>
 </div>
 
