--- a/guides/leaflet.html
+++ b/guides/leaflet.html
@@ -55,9 +55,9 @@ body {
 <body>
 
 <div class="sidenav">
-  <a href="https://davidcallaghan.github.io/index">Home</a>
-  <a href="https://davidcallaghan.github.io/guides">Guides</a>
-  <a href="https://davidcallaghan.github.io/projects">Projects</a>
+  <a href="https://davidcallaghan.github.io/index.html">Home</a>
+  <a href="https://davidcallaghan.github.io/guides.html">Guides</a>
+  <a href="https://davidcallaghan.github.io/projects.html">Projects</a>
 </div>
 
 <div class="content">
