--- a/guides.html
+++ b/guides.html
@@ -13,7 +13,7 @@
 
 body {
   margin: 0;
-  font-family: Open Sans, Helvetica, sans-serif;
+  font-family: Roboto;
 }
 
 /* Style the side navigation */
