--- a/guides/leaflet.html
+++ b/guides/leaflet.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
-<title>Hosting a webmap on Github</title>
+<title>Leaflet</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 </head>
+
+
 <body>
 
 <div class="sidenav">
