--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
 
+<div class="header">
+    <h1>This is an index page</h1>
+
 <div class="sidenav">
   <a href="https://davidcallaghan.github.io/index.html">Home</a>
   <a href="https://davidcallaghan.github.io/guides.html">Guides</a>
@@ -19,10 +22,8 @@
 </div>
 
 <div class="content">
-        <h1>This is an index page</h1>
-        <p>
-            This is some text on the index page
-        </p>
+    <p>This is some text on the index page</p>
 </div>
+
 </body>
         
