--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <div class="header">
     <h1>This is an index page</h1>
+</div>
 
 <div class="sidenav">
   <a href="https://davidcallaghan.github.io/index.html">Home</a>
@@ -22,7 +23,17 @@
 </div>
 
 <div class="content">
-    <p>This is some text on the index page</p>
+    <div class=row>
+        <div class="column">
+            <p>column 1</p>
+        </div>    
+        <div class="column">
+            <p>column 2</p>
+        </div>
+        <div class="column">
+            <p>column 3</p>
+        </div>
+    </div>
 </div>
 
 </body>
