--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>DavidCallaghan.github.io</title>
+<title>DavidCallaghan</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -23,17 +23,19 @@
 </div>
 
 <div class="content">
-    <div class=row>
-        <div class="column">
-            <p>column 1</p>
-        </div>    
-        <div class="column">
-            <p>column 2</p>
-        </div>
-        <div class="column">
-            <p>column 3</p>
-        </div>
-    </div>
+    <div class="row">
+  <div class="column">
+    <h2>column 1</h2>
+  </div>
+  
+  <div class="column">
+    <h2>column 2</h2>
+  </div>
+  
+  <div class="column">
+    <h2>column 3</h2>
+  </div>
+</div>
 </div>
 
 </body>
